# diagnostics

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
