[package]
name = "diagnostics"
version = "0.1.0"
authors = ["Sandeep Datta <datta.sandeep@gmail.com>"]
readme = "README.md"
license = "MITNFA"
description = "Exports a set of diagnostic macros which can be useful for inspecting the value of various expressions in your code at runtime."
repository = "https://github.com/sandeep-datta/diagnostics.git"

[dependencies]
